feedback.txt
Your test suite did not compile!

tests/tests.cc:92:23: error: too few arguments to function call, expected 4, have 0
   92 |   atm.RegisterAccount()
      |   ~~~~~~~~~~~~~~~~~~~ ^
includes/atm.hpp:16:8: note: 'RegisterAccount' declared here
   16 |   void RegisterAccount(unsigned int card_num,
      |        ^               ~~~~~~~~~~~~~~~~~~~~~~
   17 |                        unsigned int pin,
      |                        ~~~~~~~~~~~~~~~~~
   18 |                        const std::string& owner_name,
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   19 |                        double balance);
      |                        ~~~~~~~~~~~~~~
tests/tests.cc:92:24: error: expected ';' after expression
   92 |   atm.RegisterAccount()
      |                        ^
      |                        ;
2 errors generated.


score: 0/5
